hybrid/infrastructure/kubernetes/namespace.yaml
---
# Source: servicecomb/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servicecomb
