hybrid/infrastructure/kubernetes/example.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-provider
  labels:
    app: hello
    name: provider
spec:
  selector:
    matchLabels:
      app: hello
      name: provider
  template:
    metadata:
      labels:
        app: hello
        name: provider
    spec:
      containers:
      - name: hello-provider
        image: "gomesh/helloprovider:latest"
        imagePullPolicy: Always
        ports:
          - containerPort: 9080

---
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: hello-provider
spec:
  selector:
    app: hello
    name: provider
  ports:
  - protocol: TCP
    name: http
    port: 9080
    targetPort: 9080

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-consumer
  labels:
    app: hello
    name: consumer
spec:
  selector:
    matchLabels:
      app: hello
      name: consumer
  template:
    metadata:
      annotations:
        sidecar.mesher.io/inject: "yes"
        sidecar.mesher.io/discoveryType: "sc"
      labels:
        app: hello
        name: consumer
    spec:
      containers:
        - name: hello-consumer
          image: "gomesh/helloconsumer:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: hello-consumer
spec:
  selector:
    app: hello
    name: consumer
  ports:
  - protocol: TCP
    name: http
    port: 80
    nodePort: 30180
    targetPort: 80
  type: NodePort
